# dataforge-bi

./: .gitattributes  .gitignore  3720240706145910.js Application.js Application.js Application  LICENSE  ProductOverview_PBICapabilities_1.avif  README.md  SOTIFibre Platform API (v1).yaml  TESTING_REPORT.md  dataforge-api-v1.yaml  dev_proxy_render.py  fix_admin.py  fix_cleanup.py  fix_conn.py  fix_kpi.py  fix_seed_import.py  fix_urls.py  les prompts pour les 18 figure chapitre 2 .txt  mot de passe githube adoume  Cactus.txt  openapi_to_code_summary.py  render.yaml  run_tests.sh  test_api.py  test_api_script.py  update_seed_and_sandbox.py
dataforge_backend/: .gitignore  main.py  pyproject.toml  requirements.txt  seed_data.py
dataforge_backend/apps/core/: apps.py  constants.py  exceptions.py  models.py  pagination.py  permissions.py  responses.py  signals.py  utils.py
dataforge_backend/apps/data_sources/: __init__.py  admin.py  choices.py  filters.py  managers.py  urls.py  views.py
dataforge_backend/apps/data_warehouse/: __init__.py  admin.py  choices.py  models.py  serializers.py  services.py  urls.py  validators.py
dataforge_backend/apps/etl_engine/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  services.py  signals.py  urls.py  validators.py  views.py
dataforge_backend/apps/ml_analytics/: __init__.py  admin.py  apps.py  choices.py  constants.py  enums.py  filters.py  managers.py  models.py  signals.py  tasks.py  views.py
dataforge_backend/apps/notifications/: admin.py  apps.py  choices.py  constants.py  filters.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
dataforge_backend/apps/star_schema/: apps.py  constants.py  filters.py  (+1 more)
dataforge_backend/config/: __init__.py  asgi.py  celery.py  urls.py
dataforge_backend/docs/: README.md
(+245 files in other folders)
